Add player to backend and docs
